gcc/testsuite/g++.dg/modules/atom-preamble-1.C
// { dg-additional-options -fmodules-atom }

#define EXPORT export // { dg-error "" }
EXPORT module bob; // { dg-error "" }
